Use span instead of div for custom excerpt more wrapper. Fix sidebars do not have margins on smaller screens.

--- a/assets/source/scss/partials/_layouts.scss
+++ b/assets/source/scss/partials/_layouts.scss
@@ -126,6 +126,7 @@
 
 		.layout-secondary {
 			@include grid-col-size(12);
+			@include grid-column-gutter();
 			
 			@include breakpoint(large) {
 				@include grid-column(4);
@@ -149,6 +150,7 @@
 
 		.layout-secondary {
 			@include grid-col-size(12);
+			@include grid-column-gutter();
 			
 			@include breakpoint(large) {
 				@include grid-column(4);
